introduced separate navigation switches for touch devices

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -4,11 +4,14 @@ body {
   overflow-x: hidden;
 }
 
-
+#topnav {
+  transition: margin-left .5s;
+  overflow: hidden;
+}
 
 
 #main {
   transition: margin-left .5s;
-  padding: 20px;
   overflow: hidden;
+  min-height: 100vh;
 }
