--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -1,20 +1,24 @@
 
 
 
-$opened_width: 300px;
+$opened_width: 250px;
 $closed_width: 100px;
 
 
-@mixin close_width {
+@mixin sidenav-width {
   width: 0px;
   @media only screen and (min-width: $bp-medium) {width: $closed_width;}
 }
 
-@mixin close_margin {
+@mixin main-margin {
   margin-left: 0px;
   @media only screen and (min-width: $bp-medium) {margin-left: $closed_width;}
 }
 
+@mixin topnav-display {
+  display: inherit;
+  @media only screen and (min-width: $bp-medium) {display: none;}
+}
 
 
 
@@ -28,36 +32,18 @@ $closed_width: 100px;
 
 
 
-
-.sidenav:hover, .sidenav_open {
+.sidenav_open {
   width: $opened_width !important;
 }
-.sidenav:hover ~ #main, .sidenav_open_main {
+.sidenav_open_main {
   margin-left: $opened_width !important;
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* The side navigation menu */
-.sidenav {
+#sidenav {
   height: 100%;
-  @include close_width;
+  @include sidenav-width;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -69,8 +55,7 @@ $closed_width: 100px;
   white-space: nowrap;
 }
 
-/* The navigation menu links */
-.sidenav a {
+#sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
@@ -80,19 +65,21 @@ $closed_width: 100px;
 }
 
 
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
-  @include close_margin;
+  @include main-margin;
+}
+
+#topnav {
+  @include topnav-display;
 }
 
 
-/* Add a black background color to the top navigation */
 #topnav {
   background-color: $ct-gray;
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
+
 #topnav a {
   float: left;
   display: block;
