--- a/css/main.css
+++ b/css/main.css
@@ -3,19 +3,22 @@ body {
   padding: 0;
   overflow-x: hidden; }
 
-#main {
+#topnav {
   transition: margin-left .5s;
-  padding: 20px;
   overflow: hidden; }
 
-.sidenav:hover, .sidenav_open {
-  width: 300px !important; }
+#main {
+  transition: margin-left .5s;
+  overflow: hidden;
+  min-height: 100vh; }
 
-.sidenav:hover ~ #main, .sidenav_open_main {
-  margin-left: 300px !important; }
+.sidenav_open {
+  width: 250px !important; }
 
-/* The side navigation menu */
-.sidenav {
+.sidenav_open_main {
+  margin-left: 250px !important; }
+
+#sidenav {
   height: 100%;
   width: 0px;
   position: fixed;
@@ -28,11 +31,10 @@ body {
   transition: 0.5s;
   white-space: nowrap; }
   @media only screen and (min-width: 600px) {
-    .sidenav {
+    #sidenav {
       width: 100px; } }
 
-/* The navigation menu links */
-.sidenav a {
+#sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
@@ -40,19 +42,22 @@ body {
   display: block;
   transition: 0.3s; }
 
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
   margin-left: 0px; }
   @media only screen and (min-width: 600px) {
     #main {
       margin-left: 100px; } }
 
-/* Add a black background color to the top navigation */
+#topnav {
+  display: inherit; }
+  @media only screen and (min-width: 600px) {
+    #topnav {
+      display: none; } }
+
 #topnav {
   background-color: #2b2b2b;
   overflow: hidden; }
 
-/* Style the links inside the navigation bar */
 #topnav a {
   float: left;
   display: block;
