--- a/css/main.scss
+++ b/css/main.scss
@@ -22,4 +22,6 @@ $ct-platinum: rgb(229,228,226);
 
 
 @import "general";
-@import "nav";
+@import "nav-design";
+@import "nav-functionality";
+@import "content";
