--- a/css/_general.scss
+++ b/css/_general.scss
@@ -1,17 +1,17 @@
-body {
+* {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
-#topnav {
-  transition: margin-left .5s;
-  overflow: hidden;
+body {
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 
 #main {
-  transition: margin-left .5s;
-  overflow: hidden;
+  overflow-x: hidden;
   min-height: 100vh;
 }
