rework of sidenav sliding via transform3d completed

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -12,6 +12,9 @@ body {
 
 
 #main {
+  position:relative;
   overflow-x: hidden;
   min-height: 100vh;
+  z-index: 20;
+  background-color: $bg-gray;
 }
