--- a/css/main.scss
+++ b/css/main.scss
@@ -13,10 +13,11 @@ $bp-medium: 600px;
 $ct-gray: #2b2b2b;
 $ct-orange: rgba(229,107,46,1);
 $ct-blue: rgba(86,171,214,1);
-$ct-silver: rgb(192,192,192);
-$ct-gold: rgb(212,175,55);
-$ct-platinum: rgb(229,228,226);
+$pg-silver: rgb(192,192,192);
+$pg-gold: rgb(212,175,55);
+$pg-platinum: rgb(229,228,226);
 
+$bg-gray: rgba(245, 245, 245, 1);
 
 
 
