--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,17 @@ body {
   height: 100%; }
 
 #main {
+  position: relative;
   overflow-x: hidden;
-  min-height: 100vh; }
+  min-height: 100vh;
+  z-index: 20;
+  background-color: whitesmoke; }
 
 #topnav, #topnav-container {
   background-color: #2b2b2b;
   overflow: hidden;
-  width: 100%; }
+  width: 100%;
+  z-index: 30; }
 
 #sidenav a {
   padding: 8px 8px 8px 32px;
@@ -37,7 +41,7 @@ body {
 #sidenav {
   height: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   top: 0;
   left: 0;
   background-color: #2b2b2b;
@@ -46,15 +50,19 @@ body {
   transition: 0.5s;
   white-space: nowrap; }
 
-#topnav {
-  display: inherit;
-  transition: 0.5s;
-  transform: translate3d(0, 0, 0); }
+#topnav, #topnav-container {
+  display: block;
+  transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transform: translate3d(0, 0, 0);
+  position: fixed;
+  height: 50px;
+  left: 0;
+  top: 0; }
 
 #sidenav {
   width: 250px;
   transform: translate3d(-250px, 0, 0);
-  transition: 0.5s; }
+  transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1); }
 
 .sidenav_open-content {
   transform: translate3d(250px, 0, 0) !important; }
@@ -63,30 +71,29 @@ body {
   transform: translate3d(0, 0, 0) !important; }
 
 #main {
-  transition: 0.5s;
-  transform: translate3d(0, 0, 0); }
+  transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transform: translate3d(0, 0, 0);
+  padding-top: 50px; }
 
 @media only screen and (min-width: 600px) {
-  #topnav {
-    display: none;
-    transition: 0.5s;
-    transform: translate3d(0, 0, 0); }
+  #topnav, #topnav-container {
+    display: none; }
 
   #sidenav {
-    width: 100px;
+    width: 250px;
     transform: translate3d(0, 0, 0);
-    transition: 0.5s; }
+    transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1); }
 
   .sidenav_open-content {
-    transform: translate3d(150px, 0, 0) !important; }
+    transform: translate3d(250px, 0, 0) !important; }
 
   .sidenav_open-nav {
-    width: 250px !important; }
+    transform: translate3d(0, 0, 0) !important; }
 
   #main {
-    margin-left: 100px;
-    transition: 0.5s;
-    transform: translate3d(0, 0, 0); } }
+    transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transform: translate3d(100px, 0, 0);
+    padding-top: 0; } }
 #content {
   max-width: 960px;
   width: 95%;
