--- a/css/main.scss
+++ b/css/main.scss
@@ -21,7 +21,7 @@ $bg-gray: rgba(245, 245, 245, 1);
 
 
 
-
+@import "fonts";
 @import "general";
 @import "nav-design";
 @import "nav-functionality";
