--- a/css/_nav-functionality.scss
+++ b/css/_nav-functionality.scss
@@ -62,7 +62,7 @@ $transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 // additional parameters for devices wider than $bp-medium
 //
 
-@media only screen and (min-width: $bp-medium) {
+@media only screen and (min-width: $bp-large) {
 
   #topnav, #topnav-container {
     //hide navbar again
@@ -97,6 +97,12 @@ $transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 
     //also reset padding-top to nothing, as there is no navbar to be accomodated
     padding-top: 0;
+  }
+
+
+  .content {
+    //recenter content columns which were translated by $closed_width together with #main
+    transform: translate3d(-$closed_width,0,0);
   }
 
 }
