--- a/css/main.css
+++ b/css/main.css
@@ -187,7 +187,7 @@ body {
   transform: translate3d(0, 0, 0);
   padding-top: 50px; }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   #topnav, #topnav-container {
     display: none; }
 
@@ -205,25 +205,31 @@ body {
   #main {
     transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
     transform: translate3d(100px, 0, 0);
-    padding-top: 0; }
-
-  .content {
-    transform: translate3d(-100px, 0, 0); } }
+    padding-top: 0; } }
 #main {
   position: relative;
   overflow-x: hidden;
   min-height: 100vh;
+  width: 100vw;
   z-index: 20;
   background-color: whitesmoke; }
 
 .container {
-  background-color: blue; }
+  background-color: blue;
+  width: 100vw; }
 
 .content {
   max-width: 960px;
-  width: 80%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   background-color: red; }
+
+@media only screen and (min-width: 600px) {
+  #main {
+    width: calc(100vw - 100px); }
+
+  .container {
+    width: calc(100vw - 100px); } }
 
 /*# sourceMappingURL=main.css.map */
