--- a/css/_content.scss
+++ b/css/_content.scss
@@ -1,34 +1,7 @@
-@mixin flexbox() {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-}
-
-@mixin flex($values) {
-  -webkit-box-flex: $values;
-  -moz-box-flex:  $values;
-  -webkit-flex:  $values;
-  -ms-flex:  $values;
-  flex:  $values;
-}
-
-@mixin order($val) {
-  -webkit-box-ordinal-group: $val;
-  -moz-box-ordinal-group: $val;
-  -ms-flex-order: $val;
-  -webkit-order: $val;
-  order: $val;
-}
-
-
-
-
 #main {
   position: relative;
   overflow-x: hidden;
-  min-height: 100vh;
+  min-height: calc(100vh - #{$footer-height});
   width: 100vw;
   z-index: 20;
   background-color: $bg-gray;
@@ -50,6 +23,26 @@
 }
 
 
+#footer-container {
+  position: relative;
+  overflow-x: hidden;
+  height: $footer-height;
+  width: 100vw;
+  z-index: 20;
+  background-color: $ct-orange;
+}
+
+
+#footer {
+  max-width: 960px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: $ct-blue;
+}
+
+
+
 
 @media only screen and (min-width: $bp-medium) {
 
@@ -58,6 +51,10 @@
   }
 
   .container {
+    width: calc(100vw - #{$closed_width});
+  }
+
+  #footer-container {
     width: calc(100vw - #{$closed_width});
   }
 
