--- a/css/_content.scss
+++ b/css/_content.scss
@@ -8,17 +8,30 @@
 }
 
 
+
 .container {
   width: 100vw;
 }
 
 
 .content {
-  text-align: justify;
   max-width: 960px;
   width: 90%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.flex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.text {
+  text-align: justify;
+  padding: 15px;
 }
 
 
