--- a/css/main.css
+++ b/css/main.css
@@ -11,120 +11,121 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: opensans; }
 
 body {
   overflow-x: hidden;
   width: 100%;
   height: 100%; }
 
-.col-s-1 {
+.s-1 {
   width: 8.33%; }
 
-.col-s-2 {
+.s-2 {
   width: 16.66%; }
 
-.col-s-3 {
+.s-3 {
   width: 25%; }
 
-.col-s-4 {
+.s-4 {
   width: 33.33%; }
 
-.col-s-5 {
+.s-5 {
   width: 41.66%; }
 
-.col-s-6 {
+.s-6 {
   width: 50%; }
 
-.col-s-7 {
+.s-7 {
   width: 58.33%; }
 
-.col-s-8 {
+.s-8 {
   width: 66.66%; }
 
-.col-s-9 {
+.s-9 {
   width: 75%; }
 
-.col-s-10 {
+.s-10 {
   width: 83.33%; }
 
-.col-s-11 {
+.s-11 {
   width: 91.66%; }
 
-.col-s-12 {
+.s-12 {
   width: 100%; }
 
 @media only screen and (min-width: 600px) {
-  .col-m-1 {
+  .m-1 {
     width: 8.33%; }
 
-  .col-m-2 {
+  .m-2 {
     width: 16.66%; }
 
-  .col-m-3 {
+  .m-3 {
     width: 25%; }
 
-  .col-m-4 {
+  .m-4 {
     width: 33.33%; }
 
-  .col-m-5 {
+  .m-5 {
     width: 41.66%; }
 
-  .col-m-6 {
+  .m-6 {
     width: 50%; }
 
-  .col-m-7 {
+  .m-7 {
     width: 58.33%; }
 
-  .col-m-8 {
+  .m-8 {
     width: 66.66%; }
 
-  .col-m-9 {
+  .m-9 {
     width: 75%; }
 
-  .col-m-10 {
+  .m-10 {
     width: 83.33%; }
 
-  .col-m-11 {
+  .m-11 {
     width: 91.66%; }
 
-  .col-m-12 {
+  .m-12 {
     width: 100%; } }
 @media only screen and (min-width: 768px) {
-  .col-l-1 {
+  .l-1 {
     width: 8.33%; }
 
-  .col-l-2 {
+  .l-2 {
     width: 16.66%; }
 
-  .col-l-3 {
+  .l-3 {
     width: 25%; }
 
-  .col-l-4 {
+  .l-4 {
     width: 33.33%; }
 
-  .col-l-5 {
+  .l-5 {
     width: 41.66%; }
 
-  .col-l-6 {
+  .l-6 {
     width: 50%; }
 
-  .col-l-7 {
+  .l-7 {
     width: 58.33%; }
 
-  .col-l-8 {
+  .l-8 {
     width: 66.66%; }
 
-  .col-l-9 {
+  .l-9 {
     width: 75%; }
 
-  .col-l-10 {
+  .l-10 {
     width: 83.33%; }
 
-  .col-l-11 {
+  .l-11 {
     width: 91.66%; }
 
-  .col-l-12 {
+  .l-12 {
     width: 100%; } }
 #sidenav {
   height: 100%;
@@ -138,6 +139,24 @@ body {
   transition: 0.5s;
   white-space: nowrap; }
 
+#sidenav:after {
+  box-shadow: -3px 0px 6px rgba(0, 0, 0, 0.16), -3px 0px 6px rgba(0, 0, 0, 0.23);
+  content: " ";
+  height: 100%;
+  right: -10px;
+  position: absolute;
+  top: 0;
+  width: 10px; }
+
+@media only screen and (min-width: 600px) {
+  #sidenav:after {
+    box-shadow: -3px 0px 6px rgba(0, 0, 0, 0.16), -3px 0px 6px rgba(0, 0, 0, 0.23);
+    content: " ";
+    height: 100%;
+    right: calc(250px - 10px);
+    position: absolute;
+    top: 0;
+    width: 10px; } }
 #topnav, #topnav-container {
   background-color: #2b2b2b;
   overflow: hidden;
@@ -180,7 +199,8 @@ body {
   transform: translate3d(250px, 0, 0) !important; }
 
 .sidenav_open-nav {
-  transform: translate3d(0, 0, 0) !important; }
+  transform: translate3d(0, 0, 0) !important;
+  transition: transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1); }
 
 #main {
   transition: transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -200,11 +220,18 @@ body {
     transform: translate3d(0, 0, 0);
     transition: transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1); }
 
+  #sidenav:after {
+    transform: translate3d(100px, 0, 0);
+    transition: transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1); }
+
   .sidenav_open-content {
     transform: translate3d(250px, 0, 0) !important; }
 
   .sidenav_open-nav {
     transform: translate3d(0, 0, 0) !important; }
+
+  .sidenav_open-nav:after {
+    transform: translate3d(250px, 0, 0) !important; }
 
   #main {
     transition: transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -226,11 +253,21 @@ body {
   width: 100vw; }
 
 .content {
-  text-align: justify;
   max-width: 960px;
   width: 90%;
   margin-left: auto;
   margin-right: auto; }
+
+.flex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start; }
+
+.text {
+  text-align: justify;
+  padding: 15px; }
 
 @media only screen and (min-width: 600px) {
   #main {
