--- a/css/_nav-design.scss
+++ b/css/_nav-design.scss
@@ -46,18 +46,43 @@
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: $sidenav-main;
   display: block;
   font-family: montserrat;
 }
 
-#topnav p {
-  float: left;
-  display: block;
-  color: #f2f2f2;
+
+
+
+
+#topnav {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+
+
+
+#topnav div {
+  color: $topnav-main;
   text-align: center;
-  padding: 14px 16px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: auto;
+  margin-bottom: auto;
   text-decoration: none;
   font-size: 17px;
   white-space: nowrap;
+}
+
+#topnav-left, #topnav-right {
+  flex-grow: 0;
+}
+
+#topnav-center {
+  height: 1px;
+  flex-grow: 1;
+  background-color: $topnav-main;
 }
