--- a/css/main.scss
+++ b/css/main.scss
@@ -48,6 +48,9 @@ $pg-platinum: rgb(229,228,226);
 
 $bg-gray: rgba(245, 245, 245, 1);
 
+$topnav-main: #f2f2f2;
+$sidenav-main: #818181;
+
 
 $sidenav-boxshadow: -3px 0px 6px rgba(0,0,0,0.16), -3px 0px 6px rgba(0,0,0,0.23), 3px 0px 6px rgba(0,0,0,0.16), 3px 0px 6px rgba(0,0,0,0.23);
 
