added logo and somehow messed up mobile sliding

--- a/css/main.css
+++ b/css/main.css
@@ -159,8 +159,8 @@ body {
     width: 10px; } }
 #topnav, #topnav-container {
   background-color: #2b2b2b;
-  overflow: hidden;
-  width: 100%;
+  overflow-x: hidden;
+  width: 100vw;
   z-index: 30; }
 
 #sidenav a {
@@ -171,29 +171,59 @@ body {
   display: block;
   font-family: montserrat; }
 
-#topnav {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between; }
+#sidenav-logo {
+  margin-left: auto;
+  margin-right: auto;
+  width: 250px;
+  height: 72px;
+  position: relative; }
+  #sidenav-logo img {
+    position: absolute;
+    top: 0;
+    left: 0; }
+  #sidenav-logo #sidenav-logo-closed {
+    opacity: 1; }
+  #sidenav-logo #sidenav-logo-opened {
+    opacity: 0; }
 
-#topnav div {
+.sidenav_open-nav #sidenav-logo-opened {
+  opacity: 1 !important; }
+
+.sidenav_open-nav #sidenav-logo-closed {
+  opacity: 0 !important; }
+
+#topnav-left, #topnav-right {
+  position: relative;
+  display: inline;
   color: #f2f2f2;
+  background-color: #2b2b2b;
   text-align: center;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin-top: 14px;
+  margin-bottom: 13px;
   text-decoration: none;
   font-size: 17px;
-  white-space: nowrap; }
+  white-space: nowrap;
+  z-index: 25; }
 
-#topnav-left, #topnav-right {
-  flex-grow: 0; }
+#topnav-left {
+  float: left; }
 
-#topnav-center {
+#topnav-right {
+  float: right; }
+
+#topnav-bg {
+  margin-top: 26px;
+  margin-left: 50px;
+  margin-top: 26px;
+  z-index: 22;
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 0px;
   height: 1px;
-  flex-grow: 1;
+  width: 100vw;
   background-color: #f2f2f2; }
 
 #topnav, #topnav-container {
