--- a/css/_nav-design.scss
+++ b/css/_nav-design.scss
@@ -93,7 +93,7 @@
 #topnav-left, #topnav-right {
   position: relative;
   display: inline;
-  color: $topnav-main;
+  color: blue;
   background-color: $ct-gray;
   text-align: center;
   margin-left: 10px;
